@@ -131,6 +131,7 @@ task uberJar(type: Jar) {
 
 gluonfx {
     compilerArgs = [
+        '--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED',
         '-H:+TraceNativeToolUsage',
     ]
 }
