@@ -155,6 +155,10 @@
                 <configuration>
                     <target>${client.target}</target>
                     <mainClass>${main.class}</mainClass>
+                    <nativeImageArgs>
+                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
+                        <arg>-H:+TraceNativeToolUsage</arg>
+                    </nativeImageArgs>
                 </configuration>
             </plugin>
             <!-- following plugins are used, at package phase, to produce a jlink image for the project:
